# MulticameraSoftware

./: README.md
odroid/imgStrm_sFtp/: CMakeLists.txt  arv_main.cpp  com.h  sftp.cpp  sftp.h
odroid/imgStrm_tcp/: CMakeLists.txt  arv_main.cpp  tcp_client.cpp  tcp_client.h
src/: README.txt  Stitching_sift
src/InitialFrameDetectionF/: CMakeLists.txt  DataUtility.cpp  DataUtility.h  InitialFrameDetection  Makefile  Reconstruction3D_SIGGRAPH2012_robolounge.cpp  StructDefinition.h  epnp.cpp
src/Matching_siftF/: CMakeLists.txt  DataUtility.cpp  DataUtility.h  SIFT_LOWES_Fisheye_FLANN.cpp  StructDefinition.h
src/Matching_sift_UMN_dome/: CMakeLists.txt  Makefile  Matching_sift  SIFT_LOWES_Fisheye_FLANN.cpp
src/Reconstruction_ceres_UMN_dome/: CMakeLists.txt  CeresUtility.cpp  CeresUtility.h  DataUtility.cpp  DataUtility.h  MathUtility.cpp  MathUtility.h  Reconstruction3D_SIGGRAPH2012_robolounge.cpp  StructDefinition.h
src/SIFT++F/: CMakeLists.txt  CMakeLists.txt.bak  Makefile  SIFT++.cpp  sift.cpp  sift.hpp  sift.ipp
src/Stitching_siftF/: CMakeLists.txt  DataUtility.cpp  DataUtility.h  Makefile  MathUtility.cpp  MathUtility.h  SIFT_LOWES_Fisheye_FLANN.cpp  StructDefinition.h
